# picoram

./: Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci_checks.yml
kicad/: picoram.kicad_pro  picoram.kicad_sch  sym-lib-table  symbols.kicad_sym
src/: clocks.rs  delay.rs  main.rs  timings.rs
src_linker/: memory.x
